Change images/myprofile.png to Images/myprofile.png

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/myprofile.png" alt="Asiya's Profile" width="400"></td>
+      <td><img src="Images/myprofile.png" alt="Asiya's Profile" width="400"></td>
       <td>
         <h1>Asiya Khan</h1>
         <p><em>A culinarian, <strong><a href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTNkwNoS2EW4K88PpZz29TxoJb6DoE6-FtcoQ&usqp=CAU">an amateur artist</a></strong> and photographer.</em></p>
