--- a/contactme.html
+++ b/contactme.html
@@ -7,16 +7,16 @@
   <body>
     <h3>Fill the details below to contact me:</h3><br><br>
     <form class="" action="mailto:asiyakhan048@gmail.com" method="post"  enctype="text/plain">
-      <input type="date" name="" value="">
+      <input type="date" name="date" value="">
       <br>
       <label>Your Name:</label>
-      <input type="text" name="" value="">
+      <input type="text" name="yourName" value="">
       <br>
       <label>Your Email:</label>
-      <input type="email" name="" value="">
+      <input type="email" name="youremail" value="">
       <br>
       <label>Your Message:</label><br>
-      <textarea name="name" rows="10" cols="30"></textarea><br>
+      <textarea name="yourMessage" rows="10" cols="30"></textarea><br>
       <input type="submit" name="" value="Submit">
   </body>
 </html>
